--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-particles-js": "^3.6.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-speech": "^1.0.2",
     "react-speech-kit": "^3.0.1",
